postgres_tests/dependency/expected.txt

-----------
QUERY:
--
-- DEPENDENCIES
--

CREATE USER regress_dep_user;
RESULT:
	postgres: None

-----------
QUERY:

CREATE USER regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:

CREATE USER regress_dep_user3;
RESULT:
	postgres: None

-----------
QUERY:

CREATE GROUP regress_dep_group;
RESULT:
	postgres: None

-----------
QUERY:


CREATE TABLE deptest (f1 serial primary key, f2 text);
RESULT:
	postgres: None

-----------
QUERY:


GRANT SELECT ON TABLE deptest TO GROUP regress_dep_group;
RESULT:
	postgres: None

-----------
QUERY:

GRANT ALL ON TABLE deptest TO regress_dep_user, regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:


-- can/* REPLACED */''t drop neither because they have privileges somewhere
DROP USER regress_dep_user;
RESULT:
	postgres: role "regress_dep_user" cannot be dropped because some objects depend on it
DETAIL:  privileges for table deptest


-----------
QUERY:

DROP GROUP regress_dep_group;
RESULT:
	postgres: role "regress_dep_group" cannot be dropped because some objects depend on it
DETAIL:  privileges for table deptest


-----------
QUERY:


-- if we revoke the privileges we can drop the group
REVOKE SELECT ON deptest FROM GROUP regress_dep_group;
RESULT:
	postgres: None

-----------
QUERY:

DROP GROUP regress_dep_group;
RESULT:
	postgres: None

-----------
QUERY:


-- can/* REPLACED */''t drop the user if we revoke the privileges partially
REVOKE SELECT, INSERT, UPDATE, DELETE, TRUNCATE, REFERENCES, MAINTAIN ON deptest FROM regress_dep_user;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user;
RESULT:
	postgres: role "regress_dep_user" cannot be dropped because some objects depend on it
DETAIL:  privileges for table deptest


-----------
QUERY:


-- now we are OK to drop him
REVOKE TRIGGER ON deptest FROM regress_dep_user;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user;
RESULT:
	postgres: None

-----------
QUERY:


-- we are OK too if we drop the privileges all at once
REVOKE ALL ON deptest FROM regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:


-- can/* REPLACED */''t drop the owner of an object
-- the error message detail here would include a pg_toast_nnn name that
-- is not constant, so suppress it
-- \set VERBOSITY terse
ALTER TABLE deptest OWNER TO regress_dep_user3;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user3;
RESULT:
	postgres: role "regress_dep_user3" cannot be dropped because some objects depend on it
DETAIL:  owner of sequence deptest_f1_seq
owner of table deptest


-----------
QUERY:

-- \set VERBOSITY default

-- if we drop the object, we can drop the user too
DROP TABLE deptest;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user3;
RESULT:
	postgres: None

-----------
QUERY:


-- Test DROP OWNED
CREATE USER regress_dep_user0;
RESULT:
	postgres: None

-----------
QUERY:

CREATE USER regress_dep_user1;
RESULT:
	postgres: None

-----------
QUERY:

CREATE USER regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:

SET SESSION AUTHORIZATION regress_dep_user0;
RESULT:
	postgres: None

-----------
QUERY:

-- permission denied
DROP OWNED BY regress_dep_user1;
RESULT:
	postgres: permission denied to drop objects
DETAIL:  Only roles with privileges of role "regress_dep_user1" may drop objects owned by it.


-----------
QUERY:

DROP OWNED BY regress_dep_user0, regress_dep_user2;
RESULT:
	postgres: permission denied to drop objects
DETAIL:  Only roles with privileges of role "regress_dep_user2" may drop objects owned by it.


-----------
QUERY:

REASSIGN OWNED BY regress_dep_user0 TO regress_dep_user1;
RESULT:
	postgres: permission denied to reassign objects
DETAIL:  Only roles with privileges of role "regress_dep_user1" may reassign objects to it.


-----------
QUERY:

REASSIGN OWNED BY regress_dep_user1 TO regress_dep_user0;
RESULT:
	postgres: permission denied to reassign objects
DETAIL:  Only roles with privileges of role "regress_dep_user1" may reassign objects owned by it.


-----------
QUERY:

-- this one is allowed
DROP OWNED BY regress_dep_user0;
RESULT:
	postgres: None

-----------
QUERY:


CREATE TABLE deptest1 (f1 int unique);
RESULT:
	postgres: None

-----------
QUERY:

GRANT ALL ON deptest1 TO regress_dep_user1 WITH GRANT OPTION;
RESULT:
	postgres: None

-----------
QUERY:


SET SESSION AUTHORIZATION regress_dep_user1;
RESULT:
	postgres: None

-----------
QUERY:

CREATE TABLE deptest (a serial primary key, b text);
RESULT:
	postgres: None

-----------
QUERY:

GRANT ALL ON deptest1 TO regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:

RESET SESSION AUTHORIZATION;
RESULT:
	postgres: None

-----------
QUERY:

\z deptest1

DROP OWNED BY regress_dep_user1;
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \z deptest1
        ^


-----------
QUERY:

-- all grants revoked
\z deptest1
-- table was dropped
-- \d deptest

-- Test REASSIGN OWNED
GRANT ALL ON deptest1 TO regress_dep_user1;
RESULT:
	postgres: syntax error at or near "\"
LINE 3: \z deptest1
        ^


-----------
QUERY:

GRANT CREATE ON DATABASE regression TO regress_dep_user1;
RESULT:
	postgres: None

-----------
QUERY:


SET SESSION AUTHORIZATION regress_dep_user1;
RESULT:
	postgres: None

-----------
QUERY:

CREATE SCHEMA deptest;
RESULT:
	postgres: None

-----------
QUERY:

CREATE TABLE deptest (a serial primary key, b text);
RESULT:
	postgres: relation "deptest" already exists


-----------
QUERY:

ALTER DEFAULT PRIVILEGES FOR ROLE regress_dep_user1 IN SCHEMA deptest
  GRANT ALL ON TABLES TO regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:

CREATE FUNCTION deptest_func() RETURNS void LANGUAGE plpgsql
  AS $$ BEGIN END; $$;
RESULT:
	postgres: None

-----------
QUERY:

CREATE TYPE deptest_enum AS ENUM ('red');
RESULT:
	postgres: None

-----------
QUERY:

CREATE TYPE deptest_range AS RANGE (SUBTYPE = int4);
RESULT:
	postgres: None

-----------
QUERY:


CREATE TABLE deptest2 (f1 int);
RESULT:
	postgres: None

-----------
QUERY:

-- make a serial column the hard way
CREATE SEQUENCE ss1;
RESULT:
	postgres: None

-----------
QUERY:

ALTER TABLE deptest2 ALTER f1 SET DEFAULT nextval('ss1');
RESULT:
	postgres: None

-----------
QUERY:

ALTER SEQUENCE ss1 OWNED BY deptest2.f1;
RESULT:
	postgres: None

-----------
QUERY:


-- When reassigning ownership of a composite type, its pg_class entry
-- should match
CREATE TYPE deptest_t AS (a int);
RESULT:
	postgres: None

-----------
QUERY:

SELECT typowner = relowner
FROM pg_type JOIN pg_class c ON typrelid = c.oid WHERE typname = 'deptest_t';
RESULT:
	postgres: [(True,)]

-----------
QUERY:


RESET SESSION AUTHORIZATION;
RESULT:
	postgres: None

-----------
QUERY:

REASSIGN OWNED BY regress_dep_user1 TO regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:

-- \dt deptest

SELECT typowner = relowner
FROM pg_type JOIN pg_class c ON typrelid = c.oid WHERE typname = 'deptest_t';
RESULT:
	postgres: [(True,)]

-----------
QUERY:


-- doesn/* REPLACED */''t work: grant still exists
DROP USER regress_dep_user1;
RESULT:
	postgres: role "regress_dep_user1" cannot be dropped because some objects depend on it
DETAIL:  privileges for database regression
privileges for table deptest1
owner of default privileges on new relations belonging to role regress_dep_user1 in schema deptest


-----------
QUERY:

DROP OWNED BY regress_dep_user1;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user1;
RESULT:
	postgres: None

-----------
QUERY:


DROP USER regress_dep_user2;
RESULT:
	postgres: role "regress_dep_user2" cannot be dropped because some objects depend on it
DETAIL:  owner of sequence deptest_a_seq
owner of table deptest
owner of schema deptest
owner of function deptest_func()
owner of type deptest_enum
owner of type deptest_range
owner of table deptest2
owner of sequence ss1
owner of type deptest_t


-----------
QUERY:

DROP OWNED BY regress_dep_user2, regress_dep_user0;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user2;
RESULT:
	postgres: None

-----------
QUERY:

DROP USER regress_dep_user0;
RESULT:
	postgres: None
